--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<html>
+    <head>
+        Arkady Arkhangorodsky
+    </head>
+    <body>
+        <p> Welcome to me. </p>
+        <p> Sitemap </p>
+        <ul>
+            <li>
+                <a href="interests.html"> Things I'm into </a>
+            </li>
+            <li>
+                <a href="projects.html"> Things I've made </a>
+            </li>
+            <li>
+                <a href="thoughts.html"> Things I think </a>
+            </li>
+        </ul>
+    </body>
+</html>
