Fixed a problem with top navbar

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   <body>
 
       <div class="container" role="tabpanel">
-        <nav class="navbar navbar-default> navbar-fixed-top">
+
+        <nav class="navbar navbar-default navbar-fixed-top">
           <ul class="nav nav-pills" role="tablist">
             <li role="presentation" class="active"><a href="#home" aria-controls="  home" role="tab" data-toggle="tab">Home</a></li>
             <li role="presentation"><a href="#thoughts" aria-controls="thoughts"  role="tab" data-toggle="tab">What I think</a></li>
             <li role="presentation"><a href="#projects" aria-controls="projects" role="tab" data-toggle="tab">What I do</a></li>
             <li role="presentation"><a href="#interests" aria-controls="interests"  role="tab" data-toggle="tab">What I like</a></li> 
           </ul>
-
         </nav>
 
-      <div class="blog-header">
-        <h1 class="blog-title">Arkady's blog</h1>
-        <p class="lead blog-description">Welcome to my little piece of the internet.</p>
-      </div>
+        <div class="blog-header">
+          <h1 class="blog-title">Arkady's blog</h1>
+          <p class="lead blog-description">Welcome to my little piece of the internet.</p>
+        </div>
 
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane fade in active" id="home">
@@ -50,7 +50,7 @@
           </div>
           
           <div role="tabpanel" class="tab-pane fade" id="interests">
-            <p> Interests! </p>
+            <p> Dakota Tucker </p>
           </div>
         </div>
       </div>
