Fixed alignment of navbar, added update date, added login tab (still need to push it over to the right though)

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
       <div class="container" role="tabpanel">
 
-        <nav class="navbar navbar-default navbar-fixed-top">
-          <ul class="nav nav-pills" role="tablist">
-            <li role="presentation" class="active"><a href="#home" aria-controls="  home" role="tab" data-toggle="tab">Home</a></li>
+        <nav class="nav navbar-default">
+          <ul class="nav nav-pills">
+            <li role="presentation" class="active"><a href="#home" aria-controls="  Home" role="tab" data-toggle="tab">Home</a></li>
             <li role="presentation"><a href="#thoughts" aria-controls="thoughts"  role="tab" data-toggle="tab">What I think</a></li>
             <li role="presentation"><a href="#projects" aria-controls="projects" role="tab" data-toggle="tab">What I do</a></li>
             <li role="presentation"><a href="#interests" aria-controls="interests"  role="tab" data-toggle="tab">What I like</a></li> 
+            <li role="presentation"><a href="#login" aria-controls="login"  role="tab" data-toggle="tab">Login</a></li> 
           </ul>
         </nav>
 
@@ -52,11 +53,17 @@
           <div role="tabpanel" class="tab-pane fade" id="interests">
             <p> Dakota Tucker </p>
           </div>
+
+          <div role="tabpanel" class="tab-pane fade" id="login">
+            <p> Login screen (for Arkady to post blogs) </p>
+          </div>
         </div>
       </div>
 
     <footer class="blog-footer">
         <a href="#">Back to top</a>
+        <br></br>
+        <p> Last updated: February 2015 </p>
     </footer>
 
 
