Added dropdown, backend is now just about complete

--- a/admin.html
+++ b/admin.html
@@ -17,8 +17,15 @@
   </head>
 
   <body>
+
     <div class="container">
         <h1>Markdown HTML Form</h1>
+        <br />
+        <select>
+          <option value="blog-posts">Blog post</option>
+          <option value="project-posts">Project post</option>
+          <option value="interest-posts">Interest post</option>
+        </select>
         <br />
         <form>
             <!-- Edit markdown here! -->
@@ -48,8 +55,8 @@
     
     <!-- Encryption library -->
     <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
-    
-    <script src="js/example.js"></script> <!-- The js for this example -->
+
+    <script src="js/handleForm.js"></script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
