Added icons for external pages, added titles/types to posts

--- a/admin.html
+++ b/admin.html
@@ -29,6 +29,7 @@
         <br />
         <form>
             <!-- Edit markdown here! -->
+            <input class="titleField" placeholder="Title"></input>
             <textarea class="mdhtmlform-md">## Write markdown in the textarea!</textarea>
             <br /><br />
             <!-- Display converted html here! -->
