--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal site with my thoughts">
     <meta name="author" content="Arkady Arkhangorodsky">
+    <meta property="og:description" name="description" content="Personal Website for Arkady Arkhangorodsky">
+    <meta name="keywords" content="Student, engineering, UofT, Toronto, Programming, Hackathons, Arsenal">
+
     <link rel="icon" href="../../favicon.ico">
 
     <title>Arkady Arkhangorodsky</title>
@@ -56,7 +59,29 @@
 
     <footer class="blog-footer">
         <a href="#">Back to top</a>
-        <br></br>
+
+        <br/>
+        <br/>
+
+        <a href="http://www.github.com/arkadyark">
+          <img src="img/github.png"/>
+        </a>
+
+        <a href="http://www.facebook.com/ArkadyArkhangorodsky">
+          <img src="img/facebook.png"/>
+        </a>
+
+        <a href="res/resume.pdf">
+          <img src="img/resume.png"/>
+        </a>
+
+        <a href="http://www.twitter.com/arkadyark">
+          <img src="img/twitter.png"/>
+        </a>
+        
+        <br/>
+        <br/>
+
         <p> Last updated: February 2015 </p>
     </footer>
 
@@ -77,21 +102,21 @@
       // Attach an asynchronous callback to read the data at our posts reference
       blogs.on("child_added", function(snapshot) {
         var val = snapshot.val()
-        document.getElementById("blog-posts-div").innerHTML = "<div class=\"blog-post\">" + val["post"] + "</div>" + document.getElementById("blog-posts-div").innerHTML
+        document.getElementById("blog-posts-div").innerHTML = "<div class=\"blog-post-title\">" + val["title"] + "</div> <div class=\"blog-post\">" + val["post"] + "</div>" + document.getElementById("blog-posts-div").innerHTML
       }, function (errorObject) {
         console.log("The read failed: " + errorObject.code);
       });
       // Attach an asynchronous callback to read the data at our posts reference
       projects.on("child_added", function(snapshot) {
         var val = snapshot.val()
-        document.getElementById("project-posts-div").innerHTML = "<div class=\"blog-post\">" + val["post"] + "</div>" + document.getElementById("project-posts-div").innerHTML
+        document.getElementById("project-posts-div").innerHTML = "<div class=\"blog-post-title\">" + val["title"] + "</div> <div class=\"blog-post\">" + val["post"] + "</div>" + document.getElementById("project-posts-div").innerHTML
       }, function (errorObject) {
         console.log("The read failed: " + errorObject.code);
       });
       // Attach an asynchronous callback to read the data at our posts reference
       interests.on("child_added", function(snapshot) {
         var val = snapshot.val()
-        document.getElementById("interest-posts-div").innerHTML = "<div class=\"blog-post\">" + val["post"] + "</div>" + document.getElementById("interest-posts-div").innerHTML
+        document.getElementById("interest-posts-div").innerHTML = "<div class=\"blog-post-title\">" + val["title"] + "</div> <div class=\"blog-post\">" + val["post"] + "</div>" + document.getElementById("interest-posts-div").innerHTML
       }, function (errorObject) {
         console.log("The read failed: " + errorObject.code);
       });
