Added files for new post, added alert on submission

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
 
         <div class="blog-header">
-          <h1 class="blog-title">Arkady's blog</h1>
+          <h1 class="blog-title">Arkady</h1>
           <p class="lead blog-description">Welcome to my little piece of the internet.</p>
         </div>
 
@@ -78,8 +78,8 @@
         <a href="http://www.twitter.com/arkadyark">
           <img src="img/twitter.png"/>
         </a>
-        
-        <br/>
+
+        <br/>        
         <br/>
 
         <p> Last updated: February 2015 </p>
