--- a/admin.html
+++ b/admin.html
@@ -10,9 +10,7 @@
 
     <title>Arkady Arkhangorodsky</title>
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/admin-style.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
   </head>
 
