Fixed the tab clicking issue (in maybe not an ideal way)

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     <script src='https://cdn.firebase.com/js/client/2.0.4/firebase.js'></script>
     <script>
         $(document).ready(function(){
-          $('ul.tabs li').click(function(){
-            var tab_id = $(this).attr('data-tab');
+          $('ul.tabs li a').click(function(){
+            var tab_id = $(this).parent().attr('data-tab');
 
             $('ul.tabs li').removeClass('current');
             $('.tab-content').removeClass('current');
 
-            $(this).addClass('current');
+            $(this).parent().addClass('current');
             $("#"+tab_id).addClass('current');
             })
         })
