Did some more styling, added cards, section titles, and a nicer background color

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
 
         <div class="tab-content about current" id="about">
+          <h2 class="tab-title">About me</h2>
           <div class="content-card">
             <p> My name is Arkady ('R-kah-dee') Arkhangorodsky (nope). I'm a student in my first year of Engineering Science at the University of Toronto. interested in programming, music, history, people, robots, and a whole lot more. I like to play piano when I get the chance. </p>
             <p> On this site you'll find my thoughts, projects, interests and more. I like to think that I have a lot of them. </p>
@@ -46,14 +47,17 @@
         </div>
 
         <div class="tab-content thoughts" id="thoughts">
+          <h2 class="tab-title">Thoughts</h2>
           <div id="blog-posts-div"></div>
         </div>
 
         <div class="tab-content projects" id="projects">
+          <h2 class="tab-title">Projects</h2>
           <div id="project-posts-div"></div>
         </div>
 
         <div class="tab-content interests" id="interests">
+          <h2 class="tab-title">Interests</h2>
           <div id="interest-posts-div"></div>
         </div>
 
