--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+        <img src="img/bg.png" id="background">
 
         <ul class="tabs">
           <li class="tab-link current" data-tab="about">
@@ -74,10 +75,6 @@
 
           <a href="res/resume.pdf">
             <img src="img/resume.png"/>
-          </a>
-
-          <a href="http://www.twitter.com/arkadyark">
-            <img src="img/twitter.png"/>
           </a>
         </div>
 
