Made the top bar stay at the top, fixed up some styling

--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
   <body>
         <img src="img/bg.png" id="background">
 
-        <ul class="tabs">
-          <li class="tab-link current" data-tab="about">
-            <a href="#about"> About me </a>
-         </li>
-          <li class="tab-link" data-tab="thoughts">
-            <a href="#thoughts"> What I think </a>
-          </li>
-          <li class="tab-link" data-tab="projects">
-            <a href="#projects"> What I do </a>
-          </li>
-          <li class="tab-link" data-tab="interests">
-            <a href="#interests"> What I like </a>
-          </li>
-        </ul>
-
         <div class="header">
           <h1 class="title">Arkady</h1>
           <p class="subtitle">Welcome to my little piece of the internet.</p>
+          <ul class="tabs">
+            <li class="tab-link current" data-tab="about">
+              <a href="#about"> About me </a>
+           </li>
+            <li class="tab-link" data-tab="thoughts">
+              <a href="#thoughts"> What I think </a>
+            </li>
+            <li class="tab-link" data-tab="projects">
+              <a href="#projects"> What I do </a>
+            </li>
+            <li class="tab-link" data-tab="interests">
+              <a href="#interests"> What I like </a>
+            </li>
+          </ul>
         </div>
 
         <div class="tab-content about current" id="about">
           <h2 class="tab-title">About me</h2>
           <div class="content-card">
-            <p> My name is Arkady ('R-kah-dee') Arkhangorodsky (nope). I'm a student in my first year of Engineering Science at the University of Toronto. interested in programming, music, history, people, robots, and a whole lot more. I like to play piano when I get the chance. </p>
+            <p> My name is Arkady ('R-kah-dee') Arkhangorodsky (nope). I'm a student in my first year of Engineering Science at the University of Toronto, interested in programming, music, history, people, robots, and a whole lot more. I like to play piano when I get the chance. </p>
             <p> On this site you'll find my thoughts, projects, interests and more. I like to think that I have a lot of them. </p>
             <p> I'm mostly using this as a sandbox to pick up some web development skills, so things will be changing here pretty constantly. </p>
           </div>
+
         </div>
 
         <div class="tab-content thoughts" id="thoughts">
@@ -80,7 +80,7 @@
 
         <a href="#">Back to top</a>
 
-        <p> Last updated: February 2015 </p>
+        <p> Last updated: April 2015 </p>
 
     </footer>
 
