--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
     </footer>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+    <script src="js/vendor/jquery-1.9.1.min.js"></script>
 
 
     <!-- load firebase! -->
@@ -103,6 +103,8 @@
             $(this).parent().addClass('current');
             $("#"+tab_id).addClass('current');
             })
+        $('[href=#' + window.location.href.split("#")[1] + ']').click();
+
         })
 
       // Load posts from firebase
